fix issue with background showing behind youtube video

--- a/app/assets/stylesheets/components/_youtube-player.scss
+++ b/app/assets/stylesheets/components/_youtube-player.scss
@@ -1,8 +1,5 @@
-.youtube__video-wrapper {
-  background-color: govuk-colour('white');
-}
-
 .youtube__video-placeholder {
+  background-color: govuk-colour('white');
   position: relative;
   padding: 110px 0;
   border: solid 2px govuk-colour("black");
